# translatomatron

./: .gitignore  main.py  pyproject.toml
